# fbx_action_merger

./: README.md  main.py  setup.cfg  setup.py
fbx_samples/: ImportScene.py
scenes/: test.fbx
utils/: fbx_utils.py
