[options]
zip_safe = False
include_package_data = True
packages = find:

[aliases]
dists = bdist_wheel

[test]
extras = True

[tool:pytest]
addopts =
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests
pytest_plugins = ['pytest_virtualenv']

[bdist_wheel]
universal = 0

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel